<resources>
    <string name="app_name">AMWELL</string>
    <string name="tv_appname">AMWELL</string>
    <string name="tv_theme">Trust . Convenience . Care</string>
    <string name="et_email">Enter Your Email Address</string>
    <string name="et_password">Enter Your Password</string>
    <string name="rd_btn_p">Patient</string>
    <string name="rd_btn_a">Admin</string>
    <string name="btn_login">Login</string>

    <string name="signup">  Sign Up </string>
    <string name="tv_msg">Do not you have an account?</string>
    <string name="tv_forgot"> Forgotten Password? </string>
    <string name="tv_heading">Channel Your Doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="tv_tittle">Channel Your Doctor</string>
    <string name="tv_pname">Patient Name</string>
    <string name="tv_ppnum">Phone Number</string>
    <string name="tv_nic">NIC Number</string>
    <string name="tv_email">Email Address</string>
    <string name="tv_dname">Doctor Name</string>
    <string name="tv_date">Appointment Date</string>
    <string name="tv_time">Appointment Time</string>
    <string name="btn_confirm">Confirm</string>

    <string name="tv_rnic">NIC Number</string>
    <string name="tv_rdate">Date</string>
    <string name="tv_rtime">Time</string>
    <string name="tv_rdname">Doctor</string>
    <string name="tv_rsep">Specialization</string>
    <string name="tv_cno">Channel No</string>
    <string name="tv_rno">Room No</string>
    <string name="tv_pay">Payment</string>
    <string name="brn_cancel">Cancel</string>
    <string name="btn_update">Modify</string>
    <string name="tv_channel">My Channeling</string>
    <string name="tv_sep">Specialization</string>

    <string name="tv_pprof">Your Profile</string>
    <string name="tv_great1">Hello,</string>
    <string name="tv_great2">Samindika</string>
    <string name="tv_infor">Personal Info</string>
    <string name="tv_fname">Full Name</string>

    <string name="tv_gender">Gender</string>
    <string name="tv_id">National ID Card Number</string>
    <string name="tv_bd">Birth Date</string>
    <string name="tv_conno">Contact No</string>
    <string name="tv_eadd">Email Address</string>
    <string name="tv_home">Registered Address</string>
    <string name="btn_delp">Delete</string>
    <string name="btn_editp">Edit</string>

    <string name="et_format">MM/DD/YYYY</string>
    <string name="tv_tettime">00:00</string>

    <string name="tv_reg">AMWELL Registration</string>
    <string name="tv_regname">Full Name</string>
    <string name="tv_reggender">Gender</string>
    <string name="tv_regnic">NIC Number</string>
    <string name="tv_regbdy">Birth Date</string>
    <string name="tv_regcon">Contact No</string>
    <string name="tv_regemail">Email Address</string>
    <string name="tv_regaddress">Registered Address</string>
    <string name="tv_regpass">Password</string>
    <string name="tv_regrepass">Re-Enter Password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_regcancel">Cancel</string>


    <string name="Payment2">Payment</string>
    <string name="CardNo">Card No : </string>
    <string name="Enter_CardNum">Enter Your Card Number</string>
    <string name="ExpireDate">Expire Date : </string>
    <string name="Year">Year : </string>
    <string name="Month">Month : </string>
    <string name="cvv">CVV : </string>
    <string name="Enter_cvv">Enter CVV</string>
    <string name="confirmPayment_button">Confirm Payment</string>
    <string name="cancel_button">Cancel</string>

    <string name="paymentForm">Payment</string>
    <string name="paymentForm_Image">TODO</string>
    <string name="patientName">Patient Name : </string>
    <string name="Enter_patientName">Enter Your Name</string>
    <string name="Date">Date : </string>
    <string name="Enter_Date">Enter Date</string>
    <string name="Email">Email : </string>
    <string name="Enter_Email">Enter Your Email</string>
    <string name="Type">Type : </string>
    <string name="continue_button">Continue</string>
    <string name="Cancel_button">Cancel</string>

    <string name="payment_receipt">Receipt</string>
    <string name="Pay_Status">Payment Successful</string>
    <string name="Receipt">Receipt No : </string>
    <string name="receiptNo">Pdoc1234</string>
    <string name="patient_name">Patient Name : </string>
    <string name="Name_patient">K.S.R.Y. Weerasinghe</string>
    <string name="patient_Email">Email : </string>
    <string name="Email_patient">krishan@gmail.com</string>
    <string name="Receipt_date">Date : </string>
    <string name="Date_receipt">25/06/2021</string>
    <string name="Receipt_amount">Amount :  Rs. </string>
    <string name="amount_receipt">2100.00</string>
    <string name="done_button">Done</string>

    <string name="Refund_icon">TODO</string>
    <string name="Refund_form">Refund</string>
    <string name="refund_patientName">Patient Name : </string>
    <string name="Enter_refundPatient">Enter Your Name</string>
    <string name="refund_Date">Date : </string>
    <string name="refund_receiptNo">Receipt No : </string>
    <string name="Enter_refundReceipt">Enter Recepit Number</string>
    <string name="refund_Amount">Amount :   Rs. </string>
    <string name="Enter_refundAmount">Enter Refund Amount</string>
    <string name="Refund_Email">Email : </string>
    <string name="Enter_refundEmail">Enter Email</string>
    <string name="Confirm_button">Confirm Refund</string>
    <string name="refund_cancelButton">Cancel</string>

    <string name="shrp">Add Reports</string>
    <string name="adrp_name">Name</string>
    <string name="adrp_nic">NIC</string>
    <string name="adrp_age">Age</string>
    <string name="adrp_allg">Allergies</string>
    <string name="adrp_chbx">Allergies</string>
    <string name="adrtp_bldgrp">Blood Group</string>
    <string name="adrp_weight">Weight</string>
    <string name="adrp_bp">Blood Pressure</string>
    <string name="adrp_bs">Blood Sugar</string>
    <string name="adrp_sbmt">Submit</string>
    <string name="uprp">Update Report</string>
    <string name="uprp_name">Name</string>
    <string name="uprp_age">Age</string>
    <string name="uprp_nic">NIC</string>
    <string name="uprp_chbx">Allergies</string>
    <string name="uprp_bldgrp">Blood Group</string>
    <string name="uprp_weight">Weight</string>
    <string name="uprp_bp">Blood Pressure</string>
    <string name="uprp_bs">Blood Sugar</string>
    <string name="uprp_update">Update</string>
    <string name="shrp1">Patient Report</string>
    <string name="shrp_name">Name</string>

    <string name="shrp_name2">Samindika</string>
    <string name="shrp_nic">NIC</string>
    <string name="shrp_nic2">1234567890</string>
    <string name="shrp_bp">Blood Pressure</string>
    <string name="shrp_bp2">30/60 mmHg</string>
    <string name="shrp_bs">Blood Sugar</string>
    <string name="shrp_bs2">140 mg/dL</string>
    <string name="shrp_allg">Allergies</string>
    <string name="shrp_allg2">Panadol</string>
    <string name="shrp_weight">Weight</string>
    <string name="shrp_weight2">40 kg</string>
    <string name="shrp_notice">For Doctor\'s use only</string>
    <string name="shrp_dcount">1 Y  13 D  15 H</string>
    <string name="shrp_lw">since last visit</string>
    <string name="adm_dsh">Admin Dashboard</string>
    <string name="adm_btn1">Add Doctor</string>
    <string name="admbtn2">Edit Doctor</string>
    <string name="admbtn3">Add Report</string>
    <string name="admbtn4">Update Report</string>
    <string name="btn_channel">Channel Your Doctor</string>
    <string name="btn_profile">View Profile</string>
    <string name="btn_payd">Payment</string>
    <string name="tv_welcome">Welcome to AMWELL !!!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_refund">Refund</string>

    <string name="tv_continue">Continue To Payment</string>
    <string name="tv_cedit">Update  Your Channel</string>
    <string name="btn_UEdit">Update</string>
    <string name="rl_prl">Patient Rpeort List</string>
    <string name="rl_prl1">Patient Report List</string>


    <string name="tv_upcoming">You have 2 Upcoming Channeling</string>

    <string name="payment">Payment</string>
    <string name="expire_date">Expire Date</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
<!--    <string name="cvv">CVV :</string>-->
    <string name="amount">Amount :</string>
    <string name="todo">TODO</string>
    <string name="enter_your_card_number">Enter Your Card Number</string>
    <string name="crdvv">cvv</string>
    <string name="payAmount">***.00</string>

    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="ref_intro">(You can apply for a Refund only within 7 days from the date of issue)</string>
</resources>